2009-12-20  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor packaging fix.
	
	* build-aux/slc.m4: Also set `TMO' to the location of the
	`timeout' script.

2009-12-17  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Enhance `slr' and `cce' for more flexibility.
	
	* tools/bin/slr.in: New parameter `-b' to specify the `cce' tag to
	use when compiling input data. Re-order stages to allow compiling
	Fibre data without a valid program executable when `-b' is
	specified.

	* tools/bin/cce.in: Recognize `mtalpha' and `mtsparc' as
	single-word aliases.

2009-12-16  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Also use the new `slr -p' feature with `slt'.
	
	* tools/bin/slt.in: Invoke `slr' with `-p'. 

2009-12-16  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor fixes in scripts.

	* tools/bin/timeout.in,
	* tools/bin/slr.in: Re-organize documentation.

	* tools/bin/slt.in: Use quotes properly.

2009-12-16  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Support packaging the execution process for later re-play.

	A new parameter `-p' is added to `slr'. It causes all the files
	required to run a program, minus the SL tool chain, to be saved to
	a directory. A copy of this directory is then sufficient to
	"re-play" the execution even without access to the SL tool chain.

	* tools/bin/slr.in: Support new option `-p'. Use timestamped
	`package directory' for temporary files. Link data input files and
	program executable in the package directory. Also print the
	timestamp when `-t' is used.

	* tools/lib/r-host.sh: Rename to...
	* tools/lib/r-host.sh.in: ...here. Save the program command line
	to the package directory.

	* tools/lib/r-mt-sim.sh.in: Save the program command line to the
	package directory.

	* tools/lib/Makefile.am: Also generate `r-host.sh'.

2009-12-16  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Make debugging output more informative.

	* tools/bin/slc.in,
	* tools/bin/slr.in,
	* tools/bin/slt.in,
	* tools/lib/r-mt-sim.sh.in: Use absolute pathnames when printing
	out program names.